[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme2.tres" type="Theme" id=1]
[ext_resource path="res://menus/settings/SoundSettings.gd" type="Script" id=2]
[ext_resource path="res://assets/svg/iconmonstr-circle-thin.svg" type="Texture" id=3]
[ext_resource path="res://assets/shaders/cool_circle.gdshader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/amt = 0.873
shader_param/outline = 0.931
shader_param/edge_softness = 0.0
shader_param/color = Color( 1, 0.14902, 0.14902, 1 )
shader_param/stroke_color = Color( 0.360784, 0.345098, 0.352941, 1 )

[node name="SoundSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Circle" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.141176 )
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -105.0
margin_right = 192.0
margin_bottom = 184.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -117.5
margin_right = 139.0
margin_bottom = 117.5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 6.0
margin_top = 57.0
margin_right = 272.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 266.0
margin_bottom = 11.0
text = "Master Volume"
align = 1

[node name="master" type="HSlider" parent="PanelContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 266.0
margin_bottom = 31.0
min_value = -72.0
max_value = 0.0
ticks_on_borders = true

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 266.0
margin_bottom = 46.0
text = "song volume:"
align = 1

[node name="song" type="HSlider" parent="PanelContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 266.0
margin_bottom = 66.0
min_value = -72.0
max_value = 0.0

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 266.0
margin_bottom = 81.0
text = "main_menu volume"
align = 1

[node name="menu" type="HSlider" parent="PanelContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 266.0
margin_bottom = 101.0
min_value = -72.0
max_value = 0.0

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
margin_left = 77.0
margin_top = 105.0
margin_right = 188.0
margin_bottom = 123.0
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 1.55
text = "back to settings"
align = 0

[node name="Label" type="Label" parent="PanelContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 272.0
margin_bottom = 231.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Sound Settings"
align = 1

[connection signal="value_changed" from="PanelContainer/VBoxContainer/master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/song" to="." method="_on_song_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/menu" to="." method="_on_menu_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
